--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   <section id="directory" class="directory-box">
     <h2 class="directory-title">Discussion Pages</h2>
     <div class="book-directory">
-        <a href="javascript:void(0);" class="discussion-link" data-target="/OnyxStorm.html"><img src="images/OnyxStorm.jpg" alt="Onyx Storm"></a>
-        <a href="javascript:void(0);" class="discussion-link" data-target="/CrescentCityHouseofEarthandBlood.html"><img src="images/CrescentCityHouseofEarthandBlood.jpg" alt="Crescent City House of Earth and Blood"></a>
+        <a href="javascript:void(0);" class="discussion-link" data-target="./OnyxStorm.html"><img src="images/OnyxStorm.jpg" alt="Onyx Storm"></a>
+        <a href="javascript:void(0);" class="discussion-link" data-target="./CrescentCityHouseofEarthandBlood.html"><img src="images/CrescentCityHouseofEarthandBlood.jpg" alt="Crescent City House of Earth and Blood"></a>
       <!-- Add more books as needed -->
     </div>
   </section>
