--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -62,13 +62,13 @@
   <!-- Add Firebase SDK Scripts here -->
   
 <!-- Firebase App (the core Firebase SDK) -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
 
 <!-- Firebase Realtime Database SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
 
 <!-- Firebase Authentication SDK (if needed) -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
 
   <script type="module">
     // Import the functions you need from the SDKs you need
@@ -94,6 +94,6 @@
     // Add your other logic for updating progress and handling comments here
   </script>
 
-  <script src="js/bookpage.js"></script>
+  <script type="module" src="js/bookpage.js"></script>
 </body>
 </html>
