--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -59,6 +59,9 @@
     <!-- Dynamically Generated Chapters will be here -->
   </section>
 
+  <button onclick="toggleCommentSection(1)">Show Comments</button>
+
+
   <!-- Add Firebase SDK Scripts here -->
   
 <!-- Firebase App (the core Firebase SDK) -->
