--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -97,6 +97,6 @@
     // Add your other logic for updating progress and handling comments here
   </script>
 
-  <script type="module" src="js/bookpage.js"></script>
+  <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js"></script>
 </body>
 </html>
