--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -59,7 +59,7 @@
     <!-- Dynamically Generated Chapters will be here -->
   </section>
 
-  <button onclick="toggleCommentSection(1)">Show Comments</button>
+  <!-- <button onclick="toggleCommentSection(1)">Show Comments</button> -->
 
 
   <!-- Add Firebase SDK Scripts here -->
