--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -59,9 +59,6 @@
     <!-- Dynamically Generated Chapters will be here -->
   </section>
 
-  <!-- <button onclick="toggleCommentSection(1)">Show Comments</button> -->
-
-
   <!-- Add Firebase SDK Scripts here -->
   
 <!-- Firebase App (the core Firebase SDK) -->
@@ -98,5 +95,7 @@
   </script>
 
   <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js"></script>
+
+  <button onclick="toggleCommentSection(1)">Show Comments</button>
 </body>
 </html>
