--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -97,5 +97,6 @@
   <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js"></script>
 
   <button onclick="toggleCommentSection(1)">Show Comments</button>
+  <button onclick="submitComment('chapter-1')">Submit Comment</button>
 </body>
 </html>
