--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -96,6 +96,9 @@
 
   <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js" defer></script>
 
+  <button onclick="toggleCommentSection('chapter1')">Show Comments</button>
+  <button onclick="submitComment('chapter1')">Submit Comment</button>
+
 </body>
 </html>
 
