--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -94,7 +94,7 @@
     // Add your other logic for updating progress and handling comments here
   </script>
 
-  <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js" defer></script>
+  <script type="module" src="/wingking-bookclub.github.io/js/bookpage-local.js" defer></script>
 
   <button onclick="toggleCommentSection('chapter1')">Show Comments</button>
   <button onclick="submitComment('chapter1')">Submit Comment</button>
