--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -82,7 +82,7 @@
     // Add your other logic for updating progress and handling comments here
   </script>
 
-  <script type="module" src="/wingking-bookclub.github.io/js/bookpage2.js" defer></script>
+  <script type="module" src="/wingking-bookclub.github.io/js/bookpage.js" defer></script>
 
 </body>
 </html>
