--- a/OnyxStorm.html
+++ b/OnyxStorm.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="ccs/bookpage.css"> <!-- Corrected the path -->
 </head>
-<body data-num-chapters="95"> <!-- Set the number of chapters here -->
+<body data-book-id="OnyxStorm" data-num-chapters="95">
 
   <!-- Main Layout -->
   <div class="main-layout">
